--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
     "node": ">=v18.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js",
+    "test": "echo \"No tests specified\"",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "samuel kamotho",
@@ -19,10 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.7",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.7",
     "validator": "^13.7.0"
   }
 }
